# unity-openxr-bridge-mac

./: .gitignore  README.md
Documentation/: DeveloperWorkflow.md  MetalXRHostEncoder.md  MetalXRProtocol.md  OpenXRRuntimeSkeleton.md  QuestClientShell.md  ReleaseChecklist.md  Troubleshooting.md
MetalXR/: HomeView.swift  InitialView.swift  MetalXR.entitlements  Utilities.swift
Runtime/MetalXRHost/: CMakeLists.txt
Runtime/MetalXRHost/src/: metalxr_host_encoder.c  metalxr_host_streamer.c  metalxr_iosurface_export_fixture.c
Runtime/MetalXRProtocol/: CMakeLists.txt
Runtime/MetalXRProtocol/include/MetalXRProtocol/: metalxr_protocol.h  metalxr_shared_state.h
Runtime/MetalXRProtocol/src/: metalxr_protocol.c  metalxr_protocol_loopback.c  metalxr_shared_state.c
Runtime/MetalXRQuestGLPlugin/src/: metalxr_quest_gl_plugin.cpp
Runtime/MetalXRRuntime/: CMakeLists.txt  metalxr_runtime.json
Runtime/MetalXRRuntime/include/MetalXRRuntime/: openxr_minimal.h
Runtime/MetalXRRuntime/src/: metalxr_runtime.c
Scripts/: build-metalxr-host.sh  build-metalxr-protocol.sh  build-metalxr-runtime.sh  build-quest-client-apk.sh  build-quest-gl-plugin.sh  install-quest-apk.sh  install-run-quest-client.sh  launch-unity-openxr.sh  metalxr-status.sh  probe-metalxr-frame-export-modes.sh  probe-metalxr-frame-stream.sh  probe-metalxr-host-encoder.sh  probe-metalxr-input-bridge.sh  probe-metalxr-playmode-workflow-repeat.sh  probe-metalxr-protocol.sh  probe-metalxr-runtime.sh  probe-quest-client-screenshot.sh  probe-quest-client-unity.sh  run-metalxr-frame-stream.sh  run-metalxr-playmode-workflow.sh
TestProjects/UnityOpenXRSmoke/: .gitignore
TestProjects/UnityOpenXRSmoke/Assets/Editor/: MetalXRQuestClientBuild.cs  MetalXRWorkflowAutomation.cs
TestProjects/UnityOpenXRSmoke/Assets/MetalXRQuestClient/: MetalXRControllerInputVisualizer.cs  MetalXRQuestClientBootstrap.cs  MetalXRQuestClientDisplay.cs  MetalXRQuestEndpoint.cs  MetalXRQuestHandshakeClient.cs  MetalXRQuestProtocol.cs
TestProjects/UnityOpenXRSmoke/Assets/Plugins/Android/com/metalxr/questclient/: MetalXRSurfaceDecoder.java
TestProjects/UnityOpenXRSmoke/Assets/Scenes/: SampleScene.unity
TestProjects/UnityOpenXRSmoke/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
TestProjects/UnityOpenXRSmoke/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
TestProjects/UnityOpenXRSmoke/Assets/XR/Settings/: OpenXR Package Settings.asset
TestProjects/UnityOpenXRSmoke/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
